URI-URL type missmatched fixed