@@ -8,6 +8,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Map.Entry;
 
@@ -93,14 +95,14 @@ public class TestQanaryServiceController {
 		JSONObject jsonObject = new JSONObject();
 		// TODO: replace key by URLs of the qa vocabulary
 		jsonObject.put(QanaryMessage.endpointKey, testEndPoint);
-		jsonObject.put(QanaryMessage.inGraph, testInGraph);
-		jsonObject.put(QanaryMessage.outGraph, testOutGraph);
+		jsonObject.put(QanaryMessage.inGraphKey, testInGraph);
+		jsonObject.put(QanaryMessage.outGraphKey, testOutGraph);
 
 		// create message from json string
 		QanaryMessage requestMessage;
 		try {
 			requestMessage = new QanaryMessage(jsonObject.toJSONString());
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException e) {
 			fail(e.getMessage());
 			return;
 		}
@@ -131,8 +133,8 @@ public class TestQanaryServiceController {
 			return;
 		}
 
-		for (Entry<URL, URL> entry : requestMessage.entrySet()) {
-			URL key = entry.getKey();
+		for (Entry<URI, URI> entry : requestMessage.entrySet()) {
+			URI key = entry.getKey();
 			int compareResult = entry.getValue().toString().compareTo(resultMessage.get(key).toString());
 			assertTrue("check result vs. request: " + key, compareResult == 0);
 		}
@@ -153,23 +155,23 @@ public class TestQanaryServiceController {
 		JSONObject jsonObject = new JSONObject();
 		// TODO: replace key by URLs of the qa vocabulary
 		jsonObject.put(QanaryMessage.endpointKey, testEndPoint);
-		jsonObject.put(QanaryMessage.inGraph, testInGraph);
-		jsonObject.put(QanaryMessage.outGraph, testOutGraph);
+		jsonObject.put(QanaryMessage.inGraphKey, testInGraph);
+		jsonObject.put(QanaryMessage.outGraphKey, testOutGraph);
 
 		// create message from json string
 		QanaryMessage message;
 		try {
 			message = new QanaryMessage(jsonObject.toJSONString());
 
-			URL endpointKeyUrlFromMessage = message.get(new URL(QanaryMessage.endpointKey));
+			URI endpointKeyUrlFromMessage = message.get(new URI(QanaryMessage.endpointKey));
 			Assert.notNull(endpointKeyUrlFromMessage);
 
-			URL endpointKeyUrlFromHere = new URL(testEndPoint);
+			URI endpointKeyUrlFromHere = new URI(testEndPoint);
 
 			// TODO: more tests to ensure mechanism
 			assertTrue(endpointKeyUrlFromHere.toString().compareTo(endpointKeyUrlFromMessage.toString()) == 0);
 
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException e) {
 			e.printStackTrace();
 			fail(e.getMessage());
 		}
